--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 </dependency>
 
 
+
 		<!--  -->
 
 		<dependency>
@@ -96,7 +97,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+		  <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+        </plugin>
+			
 		</plugins>
 	</build>
 
 </project>
+
+
+
+
+
+
