--- a/DockerFile
+++ b/DockerFile
@@ -1,22 +1,11 @@
-# Importing JDK and copying required files
-FROM openjdk:19-jdk AS build
+# Use an official OpenJDK runtime as a parent image
+FROM openjdk:17-jdk
+
+# Set the working directory in the container
 WORKDIR /app
-COPY pom.xml .
-COPY src src
 
-# Copy Maven wrapper
-COPY mvnw .
-COPY .mvn .mvn
+# Copy the application's jar to the container
+COPY target/BasicjournalApp-0.0.1-SNAPSHOT.jar app.jar
 
-# Set execution permission for the Maven wrapper
-RUN chmod +x ./mvnw
-RUN ./mvnw clean package -DskipTests
-
-# Stage 2: Create the final Docker image using OpenJDK 19
-FROM openjdk:19-jdk
-VOLUME /tmp
-
-# Copy the JAR from the build stage
-COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
-EXPOSE 9936
+# Run the jar file
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
