--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 # Use an official OpenJDK runtime as a parent image
-FROM openjdk:17-jdk
+FROM openjdk:17-jdk-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,5 +7,11 @@ WORKDIR /app
 # Copy the application's jar to the container
 COPY target/BasicjournalApp-0.0.1-SNAPSHOT.jar app.jar
 
+# Expose the port the application will run on
+EXPOSE 9936
+
 # Run the jar file
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
+# 
