--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,14 @@
-# Use an official OpenJDK runtime as a parent image
+# Use a base image with JDK installed
 FROM openjdk:17-jdk-slim
 
-# Set the working directory in the container
+# Set the working directory
 WORKDIR /app
 
-# Copy the application's jar to the container
-COPY target/BasicjournalApp-0.0.1-SNAPSHOT.jar app.jar
+# Copy the JAR file into the container
+COPY target/BasicjournalApp-0.0.1-SNAPSHOT.jar /app/BasicjournalApp.jar
 
-# Expose the port the application will run on
+# Expose the port on which the application runs
 EXPOSE 9936
 
-# Run the jar file
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
-
-# 
+# Command to run the JAR file
+CMD ["java", "-jar", "BasicjournalApp.jar"]
