--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,22 @@ spring.application.name=BasicjournalApp
 # Tomcat server configuration
 server.port=9936 
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb 
-spring.datasource.username=root
-spring.datasource.password=password
+# # Database configuration
+# spring.datasource.url=jdbc:mysql://localhost:3306/employeedb 
+# spring.datasource.username=root
+# spring.datasource.password=password
 
 # JDBC driver class
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Remove this line as Hibernate can auto-detect the dialect
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.profiles.active=${ENV:dev}
